--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,7 @@
-sonar.projectKey=hello-sonar-ngrok
-sonar.sources=src
+sonar.projectKey=task-manager
+sonar.organization=your_organization
+sonar.sources=./src
+sonar.tests=./tests
+sonar.test.inclusions=**/*.test.js
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.login=your_sonar_token
