--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,22 +5,33 @@ on:
     branches:
       - main
 
-
 jobs:
   build:
     name: Build and analyze
     runs-on: windows-latest
-    
+
     steps:
+      # Checkout del repositorio
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
+      # Cache para sonar-scanner (evita la descarga en cada ejecución)
+      - name: Cache SonarScanner
+        uses: actions/cache@v2
+        with:
+          path: ~/.sonar/cache
+          key: sonar-scanner-cli-${{ runner.os }}-${{ hashFiles('**/sonar-project.properties') }}
+          restore-keys: |
+            sonar-scanner-cli-${{ runner.os }}-
+
+      # Acción de SonarQube para escanear el proyecto
       - uses: SonarSource/sonarqube-scan-action@v4
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      # If you wish to fail your job when the Quality Gate is red, uncomment the
-      # following lines. This would typically be used to fail a deployment.
+
+      # Si deseas que falle el trabajo cuando la puerta de calidad esté en rojo, descomenta las siguientes líneas.
       # - uses: SonarSource/sonarqube-quality-gate-action@v1
       #   timeout-minutes: 5
       #   env:
