--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,36 +5,22 @@ on:
     branches:
       - main
 
+
 jobs:
   build:
     name: Build and analyze
     runs-on: windows-latest
-
+    
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-
-      # Actualizar el PATH para incluir sonar-scanner
-      - name: Update PATH to include sonar-scanner
-        shell: pwsh
-        run: |
-          $env:PATH = "C:\\Users\\Usuario\\Desktop\\sonar-scanner-6.2.1.4610-windows-x64\\bin" + ";" + $env:PATH
-          Write-Host "Updated PATH: $env:PATH"
-
-      # Verificar si sonar-scanner está funcionando
-      - name: Check if SonarScanner is available
-        shell: pwsh
-        run: |
-          sonar-scanner --version
-
-      # Ejecutar el análisis de SonarQube
       - uses: SonarSource/sonarqube-scan-action@v4
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-          
-      # Si deseas fallar el trabajo si el Quality Gate es rojo, descomenta esto:
+      # If you wish to fail your job when the Quality Gate is red, uncomment the
+      # following lines. This would typically be used to fail a deployment.
       # - uses: SonarSource/sonarqube-quality-gate-action@v1
       #   timeout-minutes: 5
       #   env:
