--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,13 +8,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
         java-version: '17'
+
     - name: SonarQube Scan
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: 'http://127.0.0.1:9000'
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}  # Usa el secret con la URL pública de tu SonarQube
       run: |
         sonar-scanner
