--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: '17'
+        distribution: 'adoptopenjdk'  # O puedes usar 'zulu' o 'openjdk'
 
     - name: SonarQube Scan
       env:
