--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,8 @@
 sonar.projectKey=Trabajo-Clase
-sonar.sources=./src
-sonar.tests=./tests
-sonar.test.inclusions=**/*.test.js
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.host.url=http://127.0.0.1:9000  
-
+sonar.organization=TuOrganizacion
+sonar.host.url=https://sonarcloud.io
+sonar.login=${SONAR_TOKEN}
+sonar.cs.opencover.reportsPaths=**/TestResults/**/coverage.opencover.xml
+sonar.sources=src
+sonar.tests=tests
+sonar.exclusions=**/bin/**,**/obj/**
