--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,5 @@
 sonar.projectKey=Trabajo-Clase
-sonar.organization=TuOrganizacion
-sonar.host.url=https://sonarcloud.io
+sonar.host.url= https://aa25-157-100-136-53.ngrok-free.app
 sonar.login=${SONAR_TOKEN}
 sonar.cs.opencover.reportsPaths=**/TestResults/**/coverage.opencover.xml
 sonar.sources=src
